# metrics

./: AGENTS.md  README.md  pyproject.toml  report.py
src/metrics/: __init__.py  dataframe.py  grouping.py  metrics.py  metrics_factory.py  report.py  stats.py
src/metrics/analyzer/: __init__.py  array.py  base.py  dataframe.py  dataframe_numpy.py  matrix.py
src/sklearn/: __init__.py  metrics.py
tests/: test_analyze.py  test_dataframe_analyzer.py  test_matrix_analyzer.py
