[project]
name = "metrics"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Aki", email = "838013444@qq.com" }
]
requires-python = ">=3.10"
dependencies = [
    "numpy>=2.2.6",
    "pandas>=2.3.1",
]

[project.scripts]
metrics = "metrics:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.mypy]
ignore_missing_imports = true
